--- a/M3DScriptSystem/M3DScriptSystem.vcxproj.filters
+++ b/M3DScriptSystem/M3DScriptSystem.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="VirtualMachine.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Module.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -33,6 +36,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="VirtualMachine.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Module.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
